# RAG-Chatbot-Rushi-Kale

./: .env.example  .gitignore  Dockerfile  README.md  demo-instructions.md  disclaimer.md  pyproject.toml  railway.toml  requirements.txt  sample-qa.md  source-list.md
data/: source_registry.json
data/source_docs/: .gitkeep  sbi-total-expense-ratio-ter-data-file.xlsx
docs/: architecture.md  context.md  deployment-and-monitoring.md  deployment-plan.md  edge-case.md  implementation-plan.md
frontend/: index.html  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css
src/sbi_fund_faq/: __init__.py  __main__.py
src/sbi_fund_faq/api/: __init__.py  main.py  ui.py
src/sbi_fund_faq/chatbot/: __init__.py  generator.py  guardrails.py  validator.py
src/sbi_fund_faq/config/: __init__.py  settings.py
src/sbi_fund_faq/ingestion/: __init__.py  __main__.py  factsheet_parser.py  models.py  pipeline.py  sources.py  ter_parser.py
src/sbi_fund_faq/retrieval/: __init__.py  __main__.py  chunking.py  index.py  normalization.py  retriever.py  vector_store.py
stitch_sbi_wealth_insight_assistant/: DESIGN.md  code.html
tests/: test_api.py  test_chunking.py  test_evaluation.py  test_generator.py  test_guardrails.py  test_health.py  test_ingestion.py  test_normalization.py  test_retriever.py  test_settings.py  test_sources.py  test_validator.py  test_vector_store.py
