[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbi-fund-faq"
version = "0.1.0"
description = "Facts-only RAG FAQ assistant for selected SBI Mutual Fund schemes."
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "pypdf==5.1.0",
    "openpyxl==3.1.5",
    "langchain==0.3.14",
    "langchain-community==0.3.14",
    "langchain-openai==0.2.14",
    "faiss-cpu==1.9.0.post1",
    "streamlit==1.35.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
